head_custom: add site verif
Signed-off-by: Christina Quast <contact@christina-quast.de>

--- a/layouts/partials/head_custom.html
+++ b/layouts/partials/head_custom.html
@@ -1,1 +1,2 @@
 <link rel="stylesheet" href="/static/css/custom.css" />
+<meta name="google-site-verification" content="m3n6pzMcloBT3cd6VuLuPT6UnxIO7wfNvpd59oC6S14"/>
