--- a/content/static/css/custom.css
+++ b/content/static/css/custom.css
@@ -8,3 +8,24 @@ body {
   text-align: justify;
   font-family: monospace, Optima, Candara, Calibri, Arial, sans-serif;
 }
+
+.penguin {
+  max-width:40%;
+  float:right;
+  padding:3%;
+}
+
+@media only screen and (max-width: 979px) {
+  body {
+    font-size: 60%;
+  }
+
+  .site-header a {
+    font-size: 4px !important;
+  }
+
+  .penguin {
+    padding: 2%;
+    padding-top: 1%;
+  }
+}
