--- a/content/static/css/custom.css
+++ b/content/static/css/custom.css
@@ -13,6 +13,7 @@ body {
   max-width:40%;
   float:right;
   padding:3%;
+  padding-right: 0%;
 }
 
 @media only screen and (max-width: 979px) {
@@ -27,5 +28,6 @@ body {
   .penguin {
     padding: 2%;
     padding-top: 1%;
+    padding-right: 0%;
   }
 }
